--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-xxl-5">
                             <!-- Header text content-->
-                            <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">DATA ANALYSIS &middot; VISUALIZATION &middot; BUSINES INSIGHT</div></div>
-                                <div class="fs-3 fw-light text-muted">Turn Data Into Smarter Decisions</div>
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I Help Businesses Understand Their Data In Data-Driven Decision Making </span></h1>
+                            <div class="text-center text-xxl-start">DATA ANALYSIS &middot; VISUALIZATION &middot; BUSINES INSIGHT</div>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Turn Data Into Smarter Decisions </span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
@@ -203,9 +201,9 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Data Analyst &copy; Wira Hadi Saputra 2025</div></div>
                     <div class="col-auto">
-                        <a class="small" href="https://mailto:saputrawirahadi194@gmail.com/">Email</a>
-                        <span class="mx-1">&middot;</span>
                         <a class="small" href="https://wa.me/6285719207087/">Whatsapp</a>
+                        <span class="mx-1">&middot;</span>
+                         <a class="small" href="contact.html">Email</a>
                 </div>
             </div>
         </footer>
