--- a/projects.html
+++ b/projects.html
@@ -47,13 +47,29 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 1</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                        </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
-                                    </div>
-                                </div>
-                            </div>
+                                             <img class="img-fluid" src="assets/full.png" alt="About Dataset" />
+                                            <h2 style="text-align: center;" class="fw-bolder"> About Dataset</h2>
+                                            <p style="text-align: center;">This analysis is an independent assignment, where the data is taken from the Kaggle website, here is some information about the data.</p>
+                                        <h5>About this file</h5>
+                                     <a class="median" href="https://www.kaggle.com/datasets/wafaaelhusseini/company-employees-information-dataset">You can see information about this file/data here</a> 
+                                <h5>Use cases</h5>
+                            <p>- HR analytics and workforce demographics</p>
+                        <p>- Salary modeling and pay equity studies</p>
+                    <p>- Career growth and promotion trend analysis</p>
+                        <p>- Organizational network visualization</p> 
+                            <h5>Case analysis and conclusions</h5>
+                                 <p>- HR analytics and workforce demographics</p>
+                                        <p> Demographic analysis reveals significant functional imbalances across the organization: Tech and Product (core business) are heavily male-dominated (Tech accounts for $65% of the workforce), creating a critical gender gap that requires immediate D&I (Diversity and Inclusion) interventions in recruitment. This imbalance is exacerbated by work patterns, where Tech and Product enjoy the highest levels of flexibility (Hybrid/WFH), which is crucial for their retention. Conversely, G&A and Ops are more office-bound and have more balanced or female-dominated demographics (G&A), and Ops are more office-bound and have more balanced or female-dominated demographics (G&A), highlighting the need to ensure equal promotion and compensation opportunities across functions, regardless of gender and work location. The organization's age structure is healthy, with the majority of employees in their peak productivity (30-40 years), but succession planning for the senior workforce is still needed.</p>
+                                            <p>- Salary modeling and pay equity studies</p>
+                                                <p>This analysis revealed two key findings: first, the potential for systematic pay inequity, as evidenced by a persistent vertical gap in the gender pay trend line, meaning one gender is paid less regardless of their work experience. Second, there is a high compensation risk in certain categories (e.g., Tech or GTM) due to high salary variability (very wide salary ranges) and the presence of the largest measurable dollar gaps, making them a high priority for a salary audit and compensation policy adjustment.</p>
+                                                     <p>- Career growth and promotion trend analysis</p>
+                                                         <p>This analysis found that career path health varies significantly across categories, with Tech or Product units tending to have the highest promotion rates. However, the main issue lies in the promotion bottleneck, where categories like G&A or Ops show a sharp decline in promotion opportunities for employees with 5-7 years of experience. This bottleneck correlates with a high turnover rate, especially in the GTM category, indicating that employees are feeling stuck and choosing to leave, necessitating interventions such as clearer and more diverse career path policies (specialist vs. managerial).</p>
+                                                             <p>- Organizational network visualization</p>
+                                                                <p>Analisis struktur organisasi, yang paling simpel divisualisasikan menggunakan Stacked Bar Chart, menunjukkan bahwa Kategori Tech dan GTM dominan dari segi jumlah karyawan (headcount), yang menegaskan unit-unit ini sebagai fokus sumber daya utama perusahaan. Insight utamanya terletak pada keseimbangan internal: manajemen harus membandingkan komposisi Departemen di dalam Kategori tersebut (misalnya, rasio Engineering vs Product Management) dengan rasio headcount yang ideal di industri. Hal ini memastikan tidak ada departemen inti yang kekurangan staf (understaffed) meskipun Kategori keseluruhannya besar, demi efisiensi dan pertumbuhan yang berkelanjutan.</p>
+                                                                  </div>  
+                                                             </div>
+                                                          </div>
+                                                      </div>
                             <!-- Project Card 2-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
@@ -86,9 +102,9 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Data Analyst &copy; Wira Hadi Saputra 2025</div></div>
                     <div class="col-auto">
-                        <a class="small" href="https://mailto:saputrawirahadi194@gmail.com/">Email</a>
-                        <span class="mx-1">&middot;</span>
                         <a class="small" href="https://wa.me/6285719207087/">Whatsapp</a>
+                        <span class="mx-1">&middot;</span>
+                         <a class="small" href="contact.html">Email</a>
                 </div>
             </div>
         </footer>
