--- a/resume.html
+++ b/resume.html
@@ -47,13 +47,35 @@
                                 <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="#!">
+                                <a class="btn btn-primary px-4 py-3" href="https://drive.google.com/file/d/1gUAKHeAms2-SfwV2QC60TTTonozPBTfS/view?usp=sharing">
                                     <div class="d-inline-block bi bi-download me-2"></div>
                                     Download Resume
                                 </a>
                             </div>
                             <!-- Experience Card 1-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
+                             <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2">July 2022 - February 2024</div>
+                                                <div class="small fw-bold">Basic Physics Laboratory Assistant, Pamulang University</div>
+                                                <div class="small text-muted">Freelace at pamulang university</div>
+                                                <div class="small text-muted">Pamulang, Tangerang Selatan City, Banten</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8"><div>Job description :</div>
+                                           <div>- Guiding students in implementing basic phisics lab (mechanics, electricity, magnetism, waves, and optics). </div>
+                                           <div>- managing and testing laboratory equipment to ensure it is ready for use in lab activities.</div>
+                                            <div>- collaborating with lecturers to improve the effisiency of lab implementation and assesment system.</div>
+                                            <div>- practicing students' analytical thinking skills through mentoring and discussing experimental reseults.</div>
+                                            <div> <a href="https://saputrawirahadi194-spec.github.io/G1/">The dokumentation that describes the work steps and activities in detail can be seen here"</a></div>
+                                        </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            <!-- Experience Card 2-->
+                                <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
@@ -64,33 +86,13 @@
                                                 <div class="small text-muted">Serpong, Serpong, Tangerang Selatan City, Banten</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Job description :
-                                            Input and update social assistance recipient data.
-                                             Verify social assistance eligibility data. 
-                                             Use Microsoft Excel to input and manage family member data.
-                                             Use VBA (Visual Basic For Applications) to automate report summaries, NIK validation, and household data input.
-                                        </div></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Experience Card 2-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">July 2022 - February 2024</div>
-                                                <div class="small fw-bolder">Basic Physics Laboratory Assistant, Pamulang University</div>
-                                                <div class="small text-muted">Freelace at pamulang university</div>
-                                                <div class="small text-muted">Pamulang, Tangerang Selatan City, Banten</div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>Job description :
-                                            Guiding students in implementing basic phisics lab (mechanics, electricity, magnetism, waves, and optics). 
-                                            managing and testing laboratory equipment to ensure it is ready for use in lab activities.
-                                            collaborating with lecturers to improve the effisiency of lab implementation and assesment system.
-                                            practicing students' analytical thinking skills through mentoring and discussing experimental reseults.
-                                        </div></div>
+                                        <div class="col-lg-8"><div>Job description :</div>
+                                           <div>- Input and update social assistance recipient data.</div>
+                                            <div>- Verify social assistance eligibility data.</div>
+                                            <div>- Use Microsoft Excel to input and manage family member data.</div>
+                                             <div>- Use VBA (Visual Basic For Applications) to automate report summaries, NIK validation, and household data input. </div>
+                                             <div> <a href="https://saputrawirahadi194-spec.github.io/G2/">The dokumentation that describes the work steps and activities in detail can be seen here"</a></div>
+                                         </div>
                                     </div>
                                 </div>
                             </div>
@@ -230,12 +232,11 @@
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Data Analyst &copy; Wira Hadi Saputra 2025</div></div>
-                    <div class="col-auto">
-                        <a class="small" href="https://mailto:saputrawirahadi194@gmail.com/">Email</a>
-                        <span class="mx-1">&middot;</span>
+                      <div class="col-auto">
                         <a class="small" href="https://wa.me/6285719207087/">Whatsapp</a>
+                        <span class="mx-1">&middot;</span>
+                     <a class="small" href="contact.html">Email</a>
                 </div>
-            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
