--- a/contact.html
+++ b/contact.html
@@ -86,9 +86,9 @@
                                     <div class="d-none" id="submitSuccessMessage">
                                         <div class="text-center mb-3">
                                             <div class="fw-bolder">Form submission successful!</div>
-                                            To activate this form, sign up at
+                                            To ensure that the messege is sent, if there is any doubt regarding the delivery of the messege, please contact the following email directly, or click Whatsapp at the bottom right
                                             <br />
-                                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                            <a href="mailto:saputrawirahadi194@gmail.com">saputrawirahadi194@gmail.com"</a>
                                         </div>
                                     </div>
                                     <!-- Submit error message-->
@@ -111,10 +111,7 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Data Analyst &copy; Wira Hadi Saputra 2025</div></div>
                     <div class="col-auto">
-                        <a class="small" href="https://mailto:saputrawirahadi194@gmail.com/">Email</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="https://wa.me/6285719207087/">Whatsapp</a>
-                        <a class="small" href="#!">Contact</a>
+                    <a class="small" href="https://wa.me/6285719207087/">Whatsapp</a>
                     </div>
                 </div>
             </div>
