--- a/projects.html
+++ b/projects.html
@@ -47,42 +47,96 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                             <img class="img-fluid" src="assets/full.png" alt="About Dataset" />
-                                            <h2 style="text-align: center;" class="fw-bolder"> About Dataset</h2>
-                                            <p style="text-align: center;">This analysis is an independent assignment, where the data is taken from the Kaggle website, here is some information about the data.</p>
-                                        <h5>About this file</h5>
-                                     <a class="median" href="https://www.kaggle.com/datasets/wafaaelhusseini/company-employees-information-dataset">You can see information about this file/data here</a> 
-                                <h5>Use cases</h5>
-                            <p>- HR analytics and workforce demographics</p>
-                        <p>- Salary modeling and pay equity studies</p>
-                    <p>- Career growth and promotion trend analysis</p>
-                        <p>- Organizational network visualization</p> 
-                            <h5>Case analysis and conclusions</h5>
-                                 <p>- HR analytics and workforce demographics</p>
-                                        <p> Demographic analysis reveals significant functional imbalances across the organization: Tech and Product (core business) are heavily male-dominated (Tech accounts for $65% of the workforce), creating a critical gender gap that requires immediate D&I (Diversity and Inclusion) interventions in recruitment. This imbalance is exacerbated by work patterns, where Tech and Product enjoy the highest levels of flexibility (Hybrid/WFH), which is crucial for their retention. Conversely, G&A and Ops are more office-bound and have more balanced or female-dominated demographics (G&A), and Ops are more office-bound and have more balanced or female-dominated demographics (G&A), highlighting the need to ensure equal promotion and compensation opportunities across functions, regardless of gender and work location. The organization's age structure is healthy, with the majority of employees in their peak productivity (30-40 years), but succession planning for the senior workforce is still needed.</p>
-                                            <p>- Salary modeling and pay equity studies</p>
-                                                <p>This analysis revealed two key findings: first, the potential for systematic pay inequity, as evidenced by a persistent vertical gap in the gender pay trend line, meaning one gender is paid less regardless of their work experience. Second, there is a high compensation risk in certain categories (e.g., Tech or GTM) due to high salary variability (very wide salary ranges) and the presence of the largest measurable dollar gaps, making them a high priority for a salary audit and compensation policy adjustment.</p>
-                                                     <p>- Career growth and promotion trend analysis</p>
-                                                         <p>This analysis found that career path health varies significantly across categories, with Tech or Product units tending to have the highest promotion rates. However, the main issue lies in the promotion bottleneck, where categories like G&A or Ops show a sharp decline in promotion opportunities for employees with 5-7 years of experience. This bottleneck correlates with a high turnover rate, especially in the GTM category, indicating that employees are feeling stuck and choosing to leave, necessitating interventions such as clearer and more diverse career path policies (specialist vs. managerial).</p>
-                                                             <p>- Organizational network visualization</p>
-                                                                <p>Analisis struktur organisasi, yang paling simpel divisualisasikan menggunakan Stacked Bar Chart, menunjukkan bahwa Kategori Tech dan GTM dominan dari segi jumlah karyawan (headcount), yang menegaskan unit-unit ini sebagai fokus sumber daya utama perusahaan. Insight utamanya terletak pada keseimbangan internal: manajemen harus membandingkan komposisi Departemen di dalam Kategori tersebut (misalnya, rasio Engineering vs Product Management) dengan rasio headcount yang ideal di industri. Hal ini memastikan tidak ada departemen inti yang kekurangan staf (understaffed) meskipun Kategori keseluruhannya besar, demi efisiensi dan pertumbuhan yang berkelanjutan.</p>
-                                                                  </div>  
-                                                             </div>
-                                                          </div>
-                                                      </div>
+                                             <h2 style="text-align: center;" class="fw-bolder">About this file</h5>
+                                           <p style="text-align: center;">This analysis is an independent assignment, where the data is taken from the Kaggle website, here is some information about the data.</p>
+                                       <a class="median" href="https://www.kaggle.com/datasets/ayeshasiddiqa123/finance-trends-2020-2025/data">You can see information about this file/data here</a> 
+                                           <h5>Question case</h5>
+                            <p>1. How do high-risk (Equity) and low-risk (Gold/Deposit) investment interest patterns shift with age, and what product opportunities can be offered to address this shift?</p>
+                        <p>2. Is there a dissonance between investors' stated financial goals (Rational) and their chosen investment instruments (Choices), and how can we recalibrate our marketing messages?</p>
+                    <p>3. In which age group is the gap in ownership of investment instruments (Mutual Funds) between Men and Women most significant, and what specific strategies should we develop to increase participation of Female investors?</p>
+                        <h5>Visualization Of Case analysis and conclusions</h5>
+                                    <div>
+                        <h5 style="text-align: center;">Answer for case no. 1</h5>
+                        </div>
+                                    <h5> Insight     :</h5>
+                                           <p>Interest in investing in the equity market (stocks) peaks at a young age (25-30 years old), then begins to decline with age, shifting to more stable investments (fixed deposits/gold). Young women also tend to show lower interest in high-risk instruments (equity markets) compared to young men.</p>
+                                     <h5>Suggestion   :</h5>
+                                            <p>Launch a hybrid product offering moderate-to-low risk to attract the 35-45 age group who are starting to leave equities. Also, hold webinars or financial training specifically designed to address risk aversion in young female investors, encouraging long-term investing.</p>     
+                                    <img class="img-fluid" src="assets/AT1.png" alt="..." /> 
+                                     <div>
+                        <h5 style="text-align: center;">Answer for case no. 2</h5>
+                        </div>
+                                    <h5> Insight     :</h5>
+                                           <p>Investors who state that their main goal is Capital Appreciation (capital increase) still allocate a large percentage to Liquidity instruments or Fixed Deposits which have lower returns.</p>
+                                     <h5>Suggestion   :</h5>
+                                            <p>Ensure that marketing materials for Equity and Mutual Funds products clearly target the segment seeking Capital Appreciation and explicitly indicate that Deposits are not the primary instrument for that purpose.</p>     
+                                    <img class="img-fluid" src="assets/AT2.png" alt="..." /> 
+                                     <div>
+                        <h5 style="text-align: center;">Answer for case no. 3</h5>
+                        </div>
+                                    <h5> Insight     :</h5>
+                                           <p>In the 30-35 age group, the average ownership of Mutual Funds among Men is much higher than that of Women.</p>
+                                     <h5>Suggestion   :</h5>
+                                            <p>Develop Mutual Funds products or investment platforms with more intuitive interfaces and narratives that appeal to female investors, thereby reducing the barrier to entry.</p>     
+                                    <img class="img-fluid" src="assets/AT3.png" alt="..." /> 
+                                        </div>
+                            </div>
+                        </div>
+                    </div>
                             <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 2</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                        </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
-                                    </div>
-                                </div>
-                            </div>
+                                            <h2 style="text-align: center;" class="fw-bolder"> About Dataset</h2>
+                                            <p style="text-align: center;">This analysis is an independent assignment, where the data is taken from the Kaggle website, here is some information about the data.</p>
+                                     <a class="median" href="https://www.kaggle.com/datasets/wafaaelhusseini/company-employees-information-dataset">You can see information about this file/data here</a> 
+                                <h5>Question case</h5>
+                            <p>1. HR analytics and workforce demographics (What is the current demographic composition, and is there a gender imbalance at the department level?)</p>
+                        <p>2. Salary modeling and pay equity studies (Is there an unfair pay gap between men and women, especially after controlling for objective factors such as yearsEXP?)</p>
+                    <p>3. Career growth and promotion trend analysis(In which department is the potential risk of turnover the highest, seen from the years EXP but has a disproportionate salary?)</p>
+                        <p>4. Organizational network visualization (Are there any structural silos in the internal network?)</p> 
+                          <h5>Visualization Of Case analysis and conclusions</h5>
+                                  <div>
+                        <h5 style="text-align: center;">Answer for case no. 1</h5>
                         </div>
+                                    <h5> Insight     :</h5>
+                                           <p>It can be seen that the Age Histogram shows a high concentration of staff at a young age (around 25-35 years old) and a high concentration again at a more mature age (around 45 years old and above). There is a gap or decrease in the number of staff between the two groups (around 35-45 years old). Next, the Department Distribution Bar Chart shows that some departments have a clear Gender dominance. (For example, a certain Dept ID is dominated by blue bars/males, and another Dept ID is dominated by orange bars/females). and finally the Pie Chart shows that the majority of staff are on WFH status (53.00%), followed by Office (21.00%) and Hybrid (18.00%).</p>
+                                     <h5>Suggestion   :</h5>
+                                            <p>Target recruitment to experienced professionals in the 35-45 age range to fill the middle leadership gap (based on Insight 1), which is crucial for structural stability. Next, conduct an audit to understand the reasons for extreme gender dominance in certain departments, then launch a targeted recruitment program to improve gender underrepresentation in those departments (based on Insight 2). Finally, with the majority of staff in WFH status, invest in remote collaboration tools and engagement programs specifically for WFH/Hybrid to ensure productivity and a sense of belonging remain high.</p>     
+                                    <img class="img-fluid" src="assets/1.png" alt="..." /> 
+                                     <div>
+                                        <div>
+                        <h5 style="text-align: center;">Answer for case no. 2</h5>
+                        </div>
+                                    <h5> Insight     :</h5>
+                                           <p>The median salary for men (the line in the middle of the blue box) appears higher than the median salary for women (the line in the middle of the orange box). Furthermore, the overall IQR for men appears slightly above the IQR for women, indicating a general unadjusted pay gap in your organization.
+The Women's Trend Line (red/orange) is consistently below the Men's Trend Line (blue) across almost all experience levels (Years Exp). This gap widens at higher experience levels (8 years and above). This is strong evidence of a structural pay gap (adjusted pay gap). This means that women are paid less than men, even after accounting for objective factors (work experience), indicating a pay equity issue.</p>
+                                     <h5>Suggestion   :</h5>
+                                            <p>Conduct an In-depth Compensation Audit across the organization, especially in departments that have large differences in Years Exp but have significantly different Salary USD between genders. Focus on Identifying Female employees (orange circles) who are below the Male Trendline at the same experience level. Also, Allocate a dedicated budget to close the pay gap by adjusting the salaries of Female employees who are shown to be underpaid based on the Audit results (Trendline). Prioritize adjustments for Female employees with high experience (above 8 years), where the gap appears to be widest, to reduce the risk of turnover of senior talent. Next, Review the salary matrix and salary increase policies to ensure that Gender factors do not become predictors of future salaries. Train hiring and promotion managers to use objective and transparent compensation metrics.</p>     
+                                    <img class="img-fluid" src="assets/2.png" alt="..." /> 
+                                     <div>
+                                        <div>
+                        <h5 style="text-align: center;">Answer for case no. 3</h5>
+                        </div>
+                                    <h5> Insight     :</h5>
+                                           <p>There is a significant difference between the lowest and highest average department experience. Departments with the highest Avg. Years Exp (the highest bar) are at risk of career stagnation and an urgent need for promotion or rotation structures. The Work Status Analysis shows that staff with certain Work Statuses (e.g., Hybrid or Office, if they represent contract/non-permanent) have a higher average experience than WFH staff. If the bar for Contract or Part-Time is longer than Full-Time, this means your most senior talent lacks job security, creating a high risk of turnover.</p>
+                                     <h5>Suggestion   :</h5>
+                                            <p>Implement a job rotation program or urgent promotions in departments with the highest average Years Exp to prevent stagnation and maintain motivation. Review experienced staff who have non-permanent work status (Contract/Part-Time) and provide a clear path for conversion to Full-Time status if they are top performers, to ensure retention of valuable knowledge.</p>     
+                                    <img class="img-fluid" src="assets/3.png" alt="..." /> 
+                                     <div>
+                                        <div>
+                        <h5 style="text-align: center;">Answer for case no. 4</h5>
+                        </div>
+                                    <h5> Insight     :</h5>
+                                           <p>Departments with Below Average Salaries (left) but Above Average Experience (top). This is the "High Value, High Risk" zone. Employees in these departments are valuable assets (experienced) but have a high potential for turnover (changing jobs) because they feel undervalued financially. Meanwhile, Departments with Above Average Salaries (right) and Below Average Experience (bottom). This is the "New Talent, Well Paid" zone. The turnover risk is low.</p>
+                                     <h5>Suggestion   :</h5>
+                                            <p>Manajemen harus memfokuskan penyesuaian gaji dan insentif retensi segera pada departemen yang titiknya jatuh di Kuadran Kiri Atas untuk mencegah kehilangan bakat senior secara massal. dan Departemen di Kuadran Kiri Bawah (Gaji Rendah, EXP Rendah) mungkin perlu program onboarding dan training yang lebih baik, tetapi risiko turnover yang ditimbulkan ke organisasi masih lebih rendah daripada Kuadran Kiri Atas.</p>     
+                                    <img class="img-fluid" src="assets/4.png" alt="..." /> 
+                                     <div>
+                                     </div>  
+                                </div>
+                          </div>
                     </div>
                 </div>
             </section>
@@ -104,7 +158,7 @@
                     <div class="col-auto">
                         <a class="small" href="https://wa.me/6285719207087/">Whatsapp</a>
                         <span class="mx-1">&middot;</span>
-                         <a class="small" href="contact.html">Email</a>
+                         <a class="small" href="mailto:saputrawirahadi194@gmail.com">Email</a>
                 </div>
             </div>
         </footer>
