--- a/resume.html
+++ b/resume.html
@@ -235,7 +235,7 @@
                       <div class="col-auto">
                         <a class="small" href="https://wa.me/6285719207087/">Whatsapp</a>
                         <span class="mx-1">&middot;</span>
-                     <a class="small" href="contact.html">Email</a>
+                     <a class="small" href="mailto:saputrawirahadi194@gmail.com">Email</a>
                 </div>
         </footer>
         <!-- Bootstrap core JS-->
